# rag-foundry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_NOTES.md  README.md  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
DOCS/: INGESTION_INTEGRATION_OVERVIEW.md  INGESTION_RETRIEVAL_EXPECTATIONS.md
DOCS/ARCHITECTURE/: adr-005-vector-store-no-orm.md
DOCS/DESIGN/: OCR_ARCHITECTURE.md  current_ingestion_data_model.md  ms2.md
gradio/: Dockerfile
ingestion_service/: Dockerfile
ingestion_service/tests/: sample_test.py
llm_service/: pyproject.toml
migrations/: env.py
migrations/versions/: 20251229_add_vectors_table.py  bb0f22648df9_create_ingestion_requests_table.py
rag_orchestrator/: pyproject.toml
shared/embedders/: query.py
src/ingestion_service/: Dockerfile  sample_test.py  test_db_connection.py  test_embedding.py
status/: Current_state.md  Current_status_20251229.md
tests/: conftest.py  conftest_db.py  test_db_operations.py
tests/api/: test_ingest_integration.py  test_ingest_persistence.py  test_ingest_status.py
tests/core/: test_embedder.py  test_embedder_factory.py  test_embedding_correctness.py  test_headless_ingest.py  test_headless_pdf_ingestor_real_pdf.py  test_headless_pdf_ingestor_real_pdf_docker.py  test_ingest_pdf_file_synthetic.py  test_ingest_pdf_file_synthetic_2.py  test_pdf_ocr_adapter_usage.py  test_pdf_ocr_failure_isolation.py  test_pdf_ocr_integration_real_pdf.py  test_pdf_ocr_integration_sample_pdf.py  test_pipeline.py  test_pipeline_with_embedder.py
(+53 files in other folders)
